--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ article > div {
     z-index: 200;
     width: 280px;
 }
-/* .hide > div {
+.hide > div {
     display: none;
-} */
+}
+.card { 
+    width: 280px;
+    height: 230px;
+}
